ProfileDetailsbugFixed